# raspbian-tee

./: .gitignore  .gitmodules  Makefile  build-in-docker.sh  cmdline (copy).txt  cmdline.txt  config (copy).txt  config.mk  config.txt  prepare-env.sh  shared.sh
docker/: Dockerfile  README.md
firmware/: config.txt
linux/: copy_rpi.sh  copy_rpi_temp.sh
linux-1905/: copy_rpi_temp.sh
linux-1905/drivers/base/: devtmpfs.c
linux-1905/fs/: bad_inode.c
linux-1905/fs/9p/: vfs_inode.c
linux-1905/fs/cifs/: cifsfs.c  dir.c
linux-1905/fs/ext4/: namei.c
linux-1905/fs/f2fs/: namei.c
linux-1905/fs/fat/: namei_msdos.c
linux-1905/fs/fuse/: dir.c
linux-1905/fs/hfs/: dir.c
linux-1905/fs/hfsplus/: dir.c
linux-1905/fs/nfs/: internal.h
linux-1905/fs/nfsd/: vfs.c
linux-1905/fs/overlayfs/: overlayfs.h
linux-1905/fs/reiserfs/: xattr.c
linux-1905/ipc/: mqueue.c
linux-1905/mm/: internal.h  mmap.c  mprotect.c  shmem.c  util.c
linux-1905/results/: utile  utile-symbols  utile-symbols-50
linux-1905/security/: Makefile  security.c
linux/fs/: internal.h  namei.c  open.c
linux/init/: main.c
linux/kernel/: cred.c  fork.c  ptrace.c  seccomp copy.c  seccomp.c
linux/mm/: Makefile  madvise.c  memdom.c  memory.c  mmap.c  smv.c  smv_mm.c
linux/security/: security.c
optee_client/: CMakeLists.txt  Makefile  flags.mk  tee-difc-stat
optee_client/libteec/: CMakeLists.txt  Makefile
optee_client/public/: difc_api.h  tee_client_api.h
optee_client/ustar-sandbox/: CMakeLists.txt  Makefile  tee_supplicant_android.mk
optee_client/ustar-sandbox/src/: bpf-syscall.h  bpf.h  config.h  defs.h  difc_api.c  difc_api.h  difc_demos.c  difc_demos.h  difc_fl.c  difc_fl.h  difc_mem.c  main.c  main.h  memdom_lib.c  memdom_lib.h  seccomp.h  seccomp_demo.c  smv_lib.h
optee_client/utils-scripts/: get_attr.sh  label_file.sh  path.sh  process.sh  set_attr.sh
optee_examples/secure_storage/: CMakeLists.txt
optee_examples/secure_storage/host/: Makefile  main.c
optee_examples/secure_storage/ta/: secure_storage_ta.c  storage.c  sub.mk
optee_examples/secure_storage/ta/include/: secure_storage_ta.h
optee_os/: loc_core  loc_total
optee_os/mk/: config.mk
results/: train_alexnet_cifar10_pp4.txt  train_mnist_lenet_pp4.txt
(+119 files in other folders)
